# script-agrr

./: .gitignore  Cargo.toml  README.md  skills-lock.json
.github/: copilot-instructions.md
.github/skills/adapt-script/: SKILL.md
.github/skills/adapt-script-template/: SKILL.md
.github/skills/cli-developer/: SKILL.md
.github/skills/test-guide/: SKILL.md
.github/workflows/: ci.yml
agrr/: Cargo.toml
agrr/src/: app.rs  credentials.rs  discovery.rs  executor.rs  lib.rs  main.rs  manifest.rs  runtime.rs  ui.rs
agrr/src/ui/: cred_mgr.rs  layout.rs  menu.rs  mod.rs  output.rs  prompts.rs  theme.rs
agrr/tests/: discovery.rs
openspec/changes/agrr-cli/: proposal.md
openspec/changes/multi-file-script-folders/: design.md
openspec/specs/arg-prompt-constraints/: spec.md
openspec/specs/build-pipeline/: spec.md
openspec/specs/credential-management/: spec.md
openspec/specs/folder-script-discovery/: spec.md
openspec/specs/runtime-resolution/: spec.md
openspec/specs/script-discovery/: spec.md
openspec/specs/script-protocol/: spec.md
openspec/specs/script-subcommands/: spec.md
openspec/specs/tui-shell/: spec.md
scripts/: hello_world.js  hello_world.py  main.py  test_arg_types.py  test_global_creds.py  test_own_creds.py
scripts/_examples/: hello_world.js
scripts/hello_world_multi/: greetings.py  main.py
scripts/hello_world_rs/: Cargo.toml
sdk/js/: index.js  package.json
sdk/python/: pyproject.toml
sdk/python/agrr_sdk/: __init__.py
sdk/python/tests/: test_agrr_sdk.py
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
tools/: build.py
(+65 files in other folders)
