[package]
name = "agrr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive CLI shell that aggregates team scripts with plug-and-play support"

[lib]
name = "agrr"
path = "src/lib.rs"

[[bin]]
name = "agrr"
path = "src/main.rs"

[dependencies]
agrr-script-sdk = { path = "../sdk/rust" }
ratatui = "0.29"
crossterm = "0.28"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "7"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
aes-gcm = "0.10"
rand = "0.8"
rpassword = "7"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
fuzzy-matcher = "0.3"
dirs = "5"

[dev-dependencies]
tempfile = "3"
