[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agrr-sdk"
version = "0.1.0"
description = "Python SDK for building agrr-compatible scripts"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["agrr_sdk*"]
